--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       crossorigin="anonymous"
     />
 
-    <title>Document</title>
+    <title>Fake Company</title>
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
